# VU-media

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  GOAL.md  README.md  docker-compose.yml  mcp-config.example.json  pyproject.toml
prompts/: analyze_screenshot.txt  daily_check.txt  draft_reply.txt  read_current_chat.txt  summarize_chat.txt  vision_verify_step.txt
scripts/: run_daily_check.ps1
src/wechat_mcp/: __init__.py  agent.py  agent_sdk.py  clicking.py  config.py  dev_cli.py  history.py  mcp_adapter.py  output_schemas.py  prompts.py  safety.py  screen.py  server.py  store.py  tool_tiers.py  unread.py  vision.py  visual_agent.py  voice.py  web.py  wechat.py
tests/: test_agent_sdk.py  test_clicking.py  test_history.py  test_prompts_and_safety.py  test_store.py  test_tool_tiers.py  test_unread.py  test_visual_agent.py  test_voice.py  test_web.py  test_wechat_scroll.py
